# Embedding

./: .gitignore  CLAUDE.md  Claude_Notes.md  Claude_References.md  ForClaude.md  MCL.ipynb  RCL.ipynb  Runs.md  VAE.md  VAE.py  VAEMulti.md  VAEMulti.py  VAE_5mer.md  VAE_5mer.py  VAE_denoise.md  VAE_denoise.py  VAE_noGC.md  VAE_noGC.py  build_knn_graph  build_snn_graph  calculate_kmer_frequencies  calculate_kmer_frequencies.md  calculate_kmer_frequencies.py  calculate_umap.py  chop_and_count  clustering.ipynb  clustering.md  concatenate_matrices  concatenate_matrices.md  convert_txt_to_npy  corrupt_and_count  create_and_load_db  create_and_load_db.md  embedding  embedding.md  fetch_ncbi_taxonomy  leiden_cluster  leiden_sweep  main.py  pyproject.toml  (+8 more)
Runs/: run_mcl_sweep.sh
Scripts/: pca_baseline.py  pca_clustering_baseline.py  pca_clustering_baseline_v2.py  taxonomy_baseline_comparison.py  taxonomy_baseline_extended.py
