[project]
name = "clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "jax[cuda12]>=0.8.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "tensorboard>=2.20.0",
    "tensorflow[and-cuda]>=2.20.0",
    "umap-learn>=0.5.9.post2",
]
